# PyAutomations

./: .replit  LICENSE  pyproject.toml  setup.cfg  start-db.sh  stop-db.sh
.github/workflows/: code_analysis_pull.yml  code_analysis_push.yml  codeql-security-analysis.yml  tests.yml
docs/: CONTRIBUTING.md  INDEX.md  README.md  adding-tasks.md  deployment.md  development.md  git_workflow.md  scripts.md  usage.md
src/automations/: __init__.py  __main__.py  keep_alive.py  utils.py  web_server.py
src/morphtomations/: __init__.py  __main__.py  keep_alive.py
src/pyautomations/: __main__.py
